add alt attribute to drinking smoothie picture

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
         <div class="container">
             <div class="row">
                 <div class="col" id="about-me">
-                    <img src="assets/images/drinking-smoothie.jpeg" class="object-fit-sm-scale" fetchpriority="high">
+                    <img src="assets/images/drinking-smoothie.jpeg" class="object-fit-sm-scale" alt="drinking-smoothie" fetchpriority="high">
                 </div>
                 <div class="col" id="about-me">
                     <h2>
