change id my-struggles to class my-struggles

--- a/about.html
+++ b/about.html
@@ -51,10 +51,11 @@
     <main>
         <div class="container">
             <div class="row">
-                <div class="col" id="about-me">
+                <div class="col about-me">
                     <img src="assets/images/drinking-smoothie.jpeg" class="object-fit-sm-scale" alt="drinking-smoothie" fetchpriority="high">
                 </div>
-                <div class="col" id="about-me">
+                <div class="col about-me">
+
                     <h2>
                         <strong>ABOUT ME</strong>
                     </h2>
@@ -78,7 +79,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col" id="my-struggles">
+                <div class="col my-struggles">
                     <h2>
                         <strong>MY STRUGGLES</strong>
                     </h2>
@@ -96,7 +97,7 @@
                         only possible if I think outside the box.
                     </p>
                 </div>
-                <div class="col" id="my-struggles">
+                <div class="col my-struggles">
                     <img src="assets/images/fruit-salad.jpeg" alt="" class="object-fit-sm-scale" fetchpriority="high">
                 </div>
             </div>
