remove trailing slash from img tag on line 71

--- a/vagus-nerve.html
+++ b/vagus-nerve.html
@@ -69,7 +69,7 @@
             <div class="row">
                 <div class="col" id="tvns-image1">
                     <img src="assets/images/vagus-nerve1.jpeg" alt="vagus-nerve-image1" id="vagus-nerve"
-                        class="object-fit-sm-scale" />
+                        class="object-fit-sm-scale">
                 </div>
                 <div class="col" id="tvns1">
                     <h4>
