change id vagus-nerve to class vagus-nerve to remove duplicate ids

--- a/vagus-nerve.html
+++ b/vagus-nerve.html
@@ -68,8 +68,7 @@
         <div class="container">
             <div class="row">
                 <div class="col" id="tvns-image1">
-                    <img src="assets/images/vagus-nerve1.jpeg" alt="vagus-nerve-image1" id="vagus-nerve"
-                        class="object-fit-sm-scale">
+                    <img src="assets/images/vagus-nerve1.jpeg" alt="vagus-nerve-image1" class="object-fit-sm-scale vagus-nerve">
                 </div>
                 <div class="col" id="tvns1">
                     <h4>
@@ -107,7 +106,7 @@
                     </p>
                 </div>
                 <div class="col" id="tvns-image2">
-                    <img src="assets/images/vagus-nerve2.jpeg" alt="vagus-nerve-image2" id="vagus-nerve" class="object-fit-sm-scale">
+                    <img src="assets/images/vagus-nerve2.jpeg" alt="vagus-nerve-image2" class="object-fit-sm-scale vagus-nerve">
                 </div>
             </div>
         </div>
