started README file

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <strong>Hack Your Nervous System, Heal Your Life.</strong>
                     </h2>
                     <p>
-                        My name is Hemal and I healed myself from Crohn's disease without following a long term strict
+                        My name is John and I healed myself from Crohn's disease without following a long term strict
                         diet & lifestyle protocol. After learning about how auto-immune disease is driven by an
                         overproduction of inflammatory cytokines, I came across science backed interventions to reduce
                         these inflammatory cytokines without the need to suppress the immune system. Successful small
