add alt attribute to fruit salad image

--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
                     </p>
                 </div>
                 <div class="col my-struggles">
-                    <img src="assets/images/fruit-salad.jpeg" alt="" class="object-fit-sm-scale" fetchpriority="high">
+                    <img src="assets/images/fruit-salad.jpeg" alt="fruit-salad" class="object-fit-sm-scale" fetchpriority="high">
                 </div>
             </div>
         </div>
