remove inline styling in footer class

--- a/vagus-nerve.html
+++ b/vagus-nerve.html
@@ -121,7 +121,7 @@
             </a>
         </div>
         <div class="container footer">
-            <div class="col-md-5 mb-3" style="margin: auto;">
+            <div class="col-md-5 mb-3">
                 <form>
                     <h5>Subscribe to our newsletter</h5>
                     <p>Monthly digest of what's new and exciting from us.</p>
