--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
                     </div>
                 </form>
             </div>
-            <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+            <div class="d-flex flex-column flex-sm-row justify-content-between py-4 border-top">
                 <p>&copy; Microbiome Madness. All rights reserved.</p>
             </div>
         </div>
