--- a/index.html
+++ b/index.html
@@ -175,13 +175,13 @@
         </div>
         <div class="container footer">
             <div class="col-md-5 mb-3">
-                <form>
-                    <h5>Subscribe to our newsletter</h5>
-                    <p>Monthly digest of what's new and exciting from us.</p>
+                <h5>Subscribe to our newsletter</h5>
+                <p>Monthly digest of what's new and exciting from us.</p>
+                <form action="form-submission.html">
                     <div class="d-flex flex-column flex-sm-row w-100 gap-2">
                         <label for="newsletter1" class="visually-hidden">Email address</label>
-                        <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
-                        <button class="btn btn-primary" type="button">Subscribe</button>
+                        <input id="newsletter1" type="email" class="form-control" placeholder="Email address">
+                        <input type="submit" class="btn btn-primary" value="Subscribe">
                     </div>
                 </form>
             </div>
