--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <form action="form-submission.html">
                     <div class="d-flex flex-column flex-sm-row w-100 gap-2">
                         <label for="newsletter1" class="visually-hidden">Email address</label>
-                        <input id="newsletter1" type="email" class="form-control" placeholder="Email address">
+                        <input id="newsletter1" type="email" class="form-control" placeholder="Email address" required>
                         <input type="submit" class="btn btn-primary" value="Subscribe">
                     </div>
                 </form>
